@@ -6,6 +6,18 @@ pkgconfigdir = $(libdir)/pkgconfig
 
 pkgconfig_DATA = dlvhex.pc
 
+html-local: doc/dlvhex.tag
+	make doxygen-doc
+
+install-html-local:
+	install -d $(DESTDIR)/$(docdir)
+	cp -rv $(top_builddir)/doc/html $(DESTDIR)/$(docdir)
+
+uninstall-local:
+	test -d $(DESTDIR)/$(docdir)/html || exit 0
+	cd $(DESTDIR)/$(docdir) && rm -rf html
+
+
 SUBDIRS = libltdl examples include src
 
 EXTRA_DIST = \
